[package]
name = "itch_plus"
version = "0.1.0"
edition = "2021"

[dependencies]
generational-arena = "0.2.9"
hyper = { version = "0.14", features = ["client", "http2", "tcp"] }
hyper-tls = "0.5.0"
itchy = "0.2.3"
reqwest = "0.11.22"
tokio = { version = "1", features = ["macros"] }
typed-arena = "2.0.2"

[dev-dependencies]
criterion = "0.3"
generational-arena = "0.2"
id-arena = "2.0"
typed-arena = "2.0"
bumpalo = "3.7"

[[bench]]
name = "benchmark"
harness = false
